--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Locais Turísticos</title>
 </head>
 <body>
-    
+    <div id="page">
+        <header>
+            <strong>Sua próxima viagem:</strong>
+        </header>
+    </div>
 </body>
 </html>
